# practice-kv-store

./: Cargo.toml
examples/: server.rs
src/: error.rs
src/pb/: mod.rs
src/service/: mod.rs
src/storage/: memory.rs  mod.rs
